--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@radix-ui/react-select": "^2.1.3",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@tanstack/react-query": "^5.62.7",
+		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"localforage": "^1.10.0",
@@ -27,6 +29,7 @@
 		"react-helmet-async": "^2.0.5",
 		"react-hook-form": "^7.54.1",
 		"react-router-dom": "^7.0.2",
+		"recharts": "^2.15.0",
 		"sonner": "^1.7.1",
 		"sort-by": "^1.2.0",
 		"styled-components": "^6.1.13",
