--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --mode development",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"test": "vitest",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"dev:test": "vite --port 50789 --mode test"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
@@ -43,17 +44,25 @@
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.1.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/node": "^22.10.2",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.20",
 		"globals": "^15.12.0",
+		"happy-dom": "^15.11.7",
+		"msw": "^2.6.9",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.16",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^6.0.1",
 		"vitest": "^2.1.8"
+	},
+	"msw": {
+		"workerDirectory": ["public"]
 	}
 }
