--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -26,5 +27,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
