--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
-  "name": "pizzashop-web",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --mode development",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "test": "vitest",
-    "preview": "vite preview",
-    "dev:test": "vite --port 50789 --mode test"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-dialog": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.3",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.3",
-    "@radix-ui/react-select": "^2.1.3",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@tanstack/react-query": "^5.62.7",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.468.0",
-    "match-sorter": "^8.0.0",
-    "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.54.1",
-    "react-router-dom": "^7.0.2",
-    "recharts": "^2.15.0",
-    "sonner": "^1.7.1",
-    "sort-by": "^1.2.0",
-    "styled-components": "^6.1.13",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.49.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "globals": "^15.12.0",
-    "happy-dom": "^15.11.7",
-    "msw": "^2.6.9",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1",
-    "vitest": "^2.1.8"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  }
+	"name": "pizzashop-web",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite --mode development",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"test": "vitest",
+		"test:e2e": "pnpm playwright test",
+		"preview": "vite preview",
+		"dev:test": "vite --port 50789 --mode test"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-dialog": "^1.1.3",
+		"@radix-ui/react-dropdown-menu": "^2.1.3",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-popover": "^1.1.3",
+		"@radix-ui/react-select": "^2.1.3",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@tanstack/react-query": "^5.62.7",
+		"axios": "^1.7.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"localforage": "^1.10.0",
+		"lucide-react": "^0.468.0",
+		"match-sorter": "^8.0.0",
+		"react": "^18.3.1",
+		"react-day-picker": "8.10.1",
+		"react-dom": "^18.3.1",
+		"react-helmet-async": "^2.0.5",
+		"react-hook-form": "^7.54.1",
+		"react-router-dom": "^7.0.2",
+		"recharts": "^2.15.0",
+		"sonner": "^1.7.1",
+		"sort-by": "^1.2.0",
+		"styled-components": "^6.1.13",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7",
+		"vite-tsconfig-paths": "^5.1.4",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.49.1",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.1.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/node": "^22.10.2",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"globals": "^15.12.0",
+		"happy-dom": "^15.11.7",
+		"msw": "^2.6.9",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16",
+		"typescript": "~5.6.2",
+		"typescript-eslint": "^8.15.0",
+		"vite": "^6.0.1",
+		"vitest": "^2.1.8"
+	},
+	"msw": {
+		"workerDirectory": ["public"]
+	}
 }
